--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.7.1",
     "react-dom": "^18.3.1",
